# snake_app_v2

./: README.md  pyproject.toml  settings.py
scripts/: main.py
snake_app/: __init__.py  cartesian.py  food.py  grid.py  snake.py
